--- a/example/Caddyfile
+++ b/example/Caddyfile
@@ -1,6 +1,4 @@
 http://localhost:1080 {
-  handle /filestation/* {
-    reverse_proxy filestation:80
-  }
+  reverse_proxy /filestation/* filestation:80
   respond "Hello!"
 }
